--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,99 +1,443 @@
-:root{ --menu-heading-color: #777777; --menu-text-color: #ffffff; --menu-background-color: #323232; --menu-border-color: #C6C7F8; }
+:root {
+  --menu-heading-color: #777777;
+  --menu-text-color: #ffffff;
+  --menu-background-color: #323232;
+  --menu-border-color: #c6c7f8;
+}
 
-*, *:before, *:after { box-sizing: border-box; -moz-box-sizing: border-box; image-rendering: -webkit-optimize-contrast; scroll-behavior: smooth;}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  image-rendering: -webkit-optimize-contrast;
+  scroll-behavior: smooth;
+}
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline; -webkit-text-size-adjust: 100%;}
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {display: block;}
-body {line-height: 1;}
-ul {list-style: none;}
-blockquote, q {quotes: none;}
-blockquote:before, blockquote:after,
-q:before, q:after {content: '';content: none;}
-table {border-collapse: collapse;border-spacing: 0;}
-button, html input[type=button], input[type=reset], input[type=submit] { -webkit-appearance: button; cursor: pointer; border: none; }
-input:not([type='radio']):not([type='checkbox']), textarea, select{-webkit-appearance: none;}
-form, label {-webkit-text-size-adjust: 100%;}
-mark {background-color: transparent;color:inherit;}
-input[type=number] { -moz-appearance: textfield !important; }
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  -webkit-text-size-adjust: 100%;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+  border: none;
+}
+input:not([type="radio"]):not([type="checkbox"]),
+textarea,
+select {
+  -webkit-appearance: none;
+}
+form,
+label {
+  -webkit-text-size-adjust: 100%;
+}
+mark {
+  background-color: transparent;
+  color: inherit;
+}
+input[type="number"] {
+  -moz-appearance: textfield !important;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 /* end reset */
 
 /*preset*/
-body{ font-family: 'Neue Montreal'; font-size: 16px; line-height: 26px;  color:#1C1C1C; background: #fff; height: 100%;}
-a{ text-decoration:none; -webkit-transition: all .3s linear;transition: all .3s linear;}
-img{max-width: 100%; vertical-align: top; image-rendering: -webkit-optimize-contrast;}
-textarea { resize:vertical; }
-iframe{ border: none; width: 100%;}
-ul, h1, h2, h3, h4{ margin:0; padding:0; list-style:none; }
-strong , b{ font-weight: bold;}
-em, i{font-style: italic;}
-input[type="submit"]{cursor: pointer; border: none;}
-a[href^="tel:"]{color: inherit!important; text-decoration: none;}
-.FormReq { border: 1px solid #d32f2f !important; border-radius: 5px;}
-.text-red{color: #d32f2f !important;}
+body {
+  font-family: "Neue Montreal";
+  font-size: 16px;
+  line-height: 26px;
+  color: #1c1c1c;
+  background: #fff;
+  height: 100%;
+}
+a {
+  text-decoration: none;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+img {
+  max-width: 100%;
+  vertical-align: top;
+  image-rendering: -webkit-optimize-contrast;
+}
+textarea {
+  resize: vertical;
+}
+iframe {
+  border: none;
+  width: 100%;
+}
+ul,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+strong,
+b {
+  font-weight: bold;
+}
+em,
+i {
+  font-style: italic;
+}
+input[type="submit"] {
+  cursor: pointer;
+  border: none;
+}
+a[href^="tel:"] {
+  color: inherit !important;
+  text-decoration: none;
+}
+.FormReq {
+  border: 1px solid #d32f2f !important;
+  border-radius: 5px;
+}
+.text-red {
+  color: #d32f2f !important;
+}
 /* Forms Presets */
-::-webkit-input-placeholder {opacity: 1; color: inherit;}
-::-moz-placeholder {opacity: 1; color: inherit;}
-:-ms-input-placeholder {opacity: 1; color: inherit;}
-:-moz-placeholder {opacity: 1; color: inherit;}
-
-.d-none{display: none;}
-.d-block{display: block;}
-.overflow-hidden { overflow: hidden !important; }
-.unset-transform{transform: unset !important;}
-.hover-underlined:hover{text-decoration: underline;}
-.pt-1{padding-top: 1em;}
-.pt-2{padding-top: 2em;}
-.pt-3{padding-top: 3em;}
-.pt-4{padding-top: 4em;}
-.pt-5{padding-top: 5em;}
-
-.pb-1{padding-bottom: 1em;}
-.pb-2{padding-bottom: 2em;}
-.pb-3{padding-bottom: 3em;}
-.pb-4{padding-bottom: 4em;}
-.pb-5{padding-bottom: 5em;}
-
-.mt-1{margin-top: 1em;}
-.mt-2{margin-top: 2em;}
-.mt-3{margin-top: 3em;}
-.mt-4{margin-top: 4em;}
-.mt-5{margin-top: 5em;}
-
-.mb{margin-bottom: .5em;}
-.mb-1{margin-bottom: 1em;}
-.mb-2{margin-bottom: 2em;}
-.mb-3{margin-bottom: 3em;}
-.mb-4{margin-bottom: 4em;}
-.mb-5{margin-bottom: 5em;}
-
-#evalan{padding: 40px 25px;}
-.wrapper{max-width: 1375px; width: 100%; margin: 0 auto; position: relative;}
-.evanlan-task-users{display: flex; flex-wrap: wrap;}
-.evanlan-task-headers{padding: 20px 0; display: flex; justify-content: flex-start; border-bottom: 1px solid #7777773d;}
-.evanlan-task-headers *{width: 33%; color: #777777;}
-.evanlan-task-users section{width: 100% !important; display: flex; align-items: center; justify-content: flex-start; padding: 20px 0; border-bottom: 1px solid #7777773d;}
-.evanlan-task-users section .user-profile-info{width: 33%; display: flex; align-items: center; align-items: center;}
-.evanlan-task-users section  img{margin-right: 10px; border-radius: 50%; width: 80px; height: 80px; object-fit: cover;}
-.evanlan-task-users section .user-profile-info h2{font-weight: bold;}
-.evanlan-task-users section .user-profile-item{width: 33%;}
-
- 
-.load-btn{display: block; border: none; background: #1CE89B; transition: background 0.3s ease; width: 300px; height: 50px; font-size: 16px; border-radius: 6px; margin: 30px auto 0;}
-.load-btn:hover{background: #0C261A; color: #1CE89B;}
-
-
-@media only screen and (max-width: 800px){
-  .evanlan-task-users section .user-profile-info { width: 70%; }
+::-webkit-input-placeholder {
+  opacity: 1;
+  color: inherit;
+}
+::-moz-placeholder {
+  opacity: 1;
+  color: inherit;
+}
+:-ms-input-placeholder {
+  opacity: 1;
+  color: inherit;
+}
+:-moz-placeholder {
+  opacity: 1;
+  color: inherit;
 }
 
-@media only screen and (max-width: 600px){
-  .evanlan-task-headers{display: none;}
-  .evanlan-task-users section {flex-wrap: wrap;}
-  .evanlan-task-users section *{width: 100% !important; text-align: center;}
-  .evanlan-task-users section .user-profile-info{padding: 5px 0; display: block !important;}
-  .evanlan-task-users section .user-profile-info img{border-radius: 0 !important; margin: 0 0 10px; width: 100px; height: 100px; object-fit: scale-down;}
-  .load-btn{width: 100%;}
+.d-none {
+  display: none;
+}
+.d-block {
+  display: block;
+}
+.overflow-hidden {
+  overflow: hidden !important;
+}
+.unset-transform {
+  transform: unset !important;
+}
+.hover-underlined:hover {
+  text-decoration: underline;
+}
+.pt-1 {
+  padding-top: 1em;
+}
+.pt-2 {
+  padding-top: 2em;
+}
+.pt-3 {
+  padding-top: 3em;
+}
+.pt-4 {
+  padding-top: 4em;
+}
+.pt-5 {
+  padding-top: 5em;
+}
 
+.pb-1 {
+  padding-bottom: 1em;
+}
+.pb-2 {
+  padding-bottom: 2em;
+}
+.pb-3 {
+  padding-bottom: 3em;
+}
+.pb-4 {
+  padding-bottom: 4em;
+}
+.pb-5 {
+  padding-bottom: 5em;
+}
+
+.mt-1 {
+  margin-top: 1em;
+}
+.mt-2 {
+  margin-top: 2em;
+}
+.mt-3 {
+  margin-top: 3em;
+}
+.mt-4 {
+  margin-top: 4em;
+}
+.mt-5 {
+  margin-top: 5em;
+}
+
+.mb {
+  margin-bottom: 0.5em;
+}
+.mb-1 {
+  margin-bottom: 1em;
+}
+.mb-2 {
+  margin-bottom: 2em;
+}
+.mb-3 {
+  margin-bottom: 3em;
+}
+.mb-4 {
+  margin-bottom: 4em;
+}
+.mb-5 {
+  margin-bottom: 5em;
+}
+
+#evalan {
+  padding: 40px 25px;
+}
+.wrapper {
+  max-width: 1375px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+.evanlan-task-users {
+  display: flex;
+  flex-wrap: wrap;
+}
+.evanlan-task-headers {
+  padding: 20px 0;
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 1px solid #7777773d;
+}
+.evanlan-task-headers * {
+  width: 33%;
+  color: #777777;
+}
+.evanlan-task-users section {
+  width: 100% !important;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px 0;
+  border-bottom: 1px solid #7777773d;
+}
+.evanlan-task-users section .user-profile-info {
+  width: 33%;
+  display: flex;
+  align-items: center;
+  align-items: center;
+}
+.evanlan-task-users section img {
+  margin-right: 10px;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+}
+.evanlan-task-users section .user-profile-info h2 {
+  font-weight: bold;
+}
+.evanlan-task-users section .user-profile-item {
+  width: 33%;
+}
+
+/* Apply styles to the button when it's not disabled */
+.load-btn {
+  display: block;
+  border: none;
+  background: #1ce89b;
+  transition: background 0.3s ease;
+  width: 300px;
+  height: 50px;
+  font-size: 16px;
+  border-radius: 6px;
+  margin: 30px auto 0;
+}
+
+/* Apply styles to the button when it's not disabled and being hovered */
+.load-btn:hover:not([disabled]) {
+  background: #0c261a;
+  color: #1ce89b;
+}
+
+/* Apply styles to the button when it's disabled */
+.load-btn[disabled] {
+  background: #ccc; /* Change the background color to a disabled state color */
+  cursor: not-allowed; /* Change the cursor to indicate it's not clickable */
+  color: #888; /* Change the text color to a disabled state color */
+}
+
+/* Apply styles to the button when it's disabled and being hovered */
+.load-btn[disabled]:hover {
+  background: #ccc; /* Keep the background color the same as when disabled */
+  color: #888; /* Keep the text color the same as when disabled */
+}
+
+@media only screen and (max-width: 800px) {
+  .evanlan-task-users section .user-profile-info {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .evanlan-task-headers {
+    display: none;
+  }
+  .evanlan-task-users section {
+    flex-wrap: wrap;
+  }
+  .evanlan-task-users section * {
+    width: 100% !important;
+    text-align: center;
+  }
+  .evanlan-task-users section .user-profile-info {
+    padding: 5px 0;
+    display: block !important;
+  }
+  .evanlan-task-users section .user-profile-info img {
+    border-radius: 0 !important;
+    margin: 0 0 10px;
+    width: 100px;
+    height: 100px;
+    object-fit: scale-down;
+  }
+  .load-btn {
+    width: 100%;
+  }
 }
